--- a/fantasy_first/css/sass/fantasy/fantasy.scss
+++ b/fantasy_first/css/sass/fantasy/fantasy.scss
@@ -2,12 +2,20 @@
   color: #ff4444 !important;
 }
 
+.orange {
+  color: #bd6d07 !important;
+}
+
 .dq {
   color: #ff4444 !important;
 }
 
 .green {
   color: #5f975f !important;
+}
+
+.gray {
+  color: #999999 !important;
 }
 
 .gold {
@@ -20,6 +28,14 @@
 
 .bronze {
   color: #755730 !important;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
 }
 
 td {
@@ -44,5 +60,9 @@ html {
 }
 
 h4 {
+  margin-bottom: 0;
+}
+
+p {
   margin-bottom: 0;
 }
