--- a/fantasy_first/views/admin_event.erb
+++ b/fantasy_first/views/admin_event.erb
@@ -5,5 +5,6 @@
 
 <script type="text/javascript">
   var EVENT_KEY = "<%=@event.key %>";
+  var EVENT_DRAFTING = <%=@event.drafting%>;
 </script>
 <script src="/cdn/admin_event.js" crossorigin></script>
