Add rules to draft page

--- a/fantasy_first/views/event_draft.erb
+++ b/fantasy_first/views/event_draft.erb
@@ -1,6 +1,26 @@
 <h2> Fantasy FIRST - <%= @event.name %> </h2>
 <h4> Draft Selections </h4>
 
+<p>
+Think you can beat the hosts, FUN Nation? Well, submit your entry here! <br />
+Here are the instructions: You have ₪200 to spend just like the hosts. Draft will close after 11:59pm ET on Thursday<br />
+<br />
+Points are awarded to teams based on the following attributes:<br />
+<br />
+<b>Qualification Rounds</b><br />
+Each Match Win: <b>2 Points</b><br />
+Each Match Tie: <b>1 Point</b><br />
+<br />
+<b>Alliance Captain:</b> <br />
+Equal to 17 minus the ALLIANCE CAPTAIN number (e.g. 14 points for ALLIANCE #3 Captain)<br />
+<br />
+<b>Draft Order Acceptance:</b> <br />
+Equal to 17 minus the Draft Order Acceptance Number (e.g. 12 points for the Team that is 5th to accept an invitation, teams selected as the 4th robot receive 0 points)<br />
+<br />
+<b>Elimination Rounds:</b><br />
+Each Match Win: <b>5 Points</b><br />
+</p>
+
 <hr />
 <div id="draftSelector">
 </div>
